# recitation-quiz-app

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: badges.json  default_texts.json
data/User Text/: 樛木.txt  清平乐李白或袁绹.txt
docs/: 01_requirement_analysis.md  02_use_case_analysis.md  03_system_architecture.md  04_detailed_design.md  05_testing_report.md  06_user_manual.md
src/: __init__.py  answer_checker.py  badge_manager.py  gui_launcher.py  main.py  progress_tracker.py  quiz_generator.py  report_exporter.py  review_scheduler.py  text_manager.py  theme_manager.py  user_profile.py
src/gui/: badge_screen.py  library.py  main_window.py  profile.py  quiz_screen.py  result.py  review_screen.py  welcome.py
tests/: test_answer_checker.py  test_badge_manager.py  test_quiz_generator.py
